--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,13 @@ plugins {
 
     // Hilt Gradle Plugin
     id 'dagger.hilt.android.plugin'
+
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
 }
 
 android {
+
     compileSdk 32
 
     defaultConfig {
@@ -29,6 +33,7 @@ android {
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
 
         buildConfigField "String", "NEWS_API_KEY", "\"${properties.getProperty("NEWS_API_KEY")}\""
+
     }
 
     buildTypes {
@@ -36,11 +41,20 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            matchingFallbacks = ['release']
+
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -79,6 +93,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    // Twittered - Twitter Java API
+    implementation 'io.github.redouane59.twitter:twittered:2.17'
+
 
 
 }
