--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,10 +92,14 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
-    // Twittered - Twitter Java API
-    implementation 'io.github.redouane59.twitter:twittered:2.17'
+    // Twitter Java SDK
+    implementation('com.twitter:twitter-api-java-sdk:2.0.2') {
+        exclude group: 'org.apache.oltu.oauth2'
+        exclude group: 'com.google.guava'
+        exclude group: 'javax.ws.rs'
+    }
 
 
 
